--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@
 
             <!-- Card 2 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                <img src="./assets/img/3D Scanner By Technology/two.png " alt="Industrial Handheld Metrology 3D Scanners"
-                    class="w-full h-48 object-cover">
+                <img src="./assets/img/3D Scanner By Technology/two.png "
+                    alt="Industrial Handheld Metrology 3D Scanners" class="w-full h-48 object-cover">
                 <div class="p-4 text-center">
                     <h3 class="text-sm font-semibold text-gray-700">Industrial Metrology 3D Scanners</h3>
                     <button
@@ -786,7 +786,8 @@ metrology-grade 3D Scanner  -->
                 <button class="mt-3 bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">Know More</button>
             </div>
             <div class="text-center">
-                <img src="./assets/img/3D Scanner By Application/three.png" alt="3D Printing" class="mx-auto rounded-lg">
+                <img src="./assets/img/3D Scanner By Application/three.png" alt="3D Printing"
+                    class="mx-auto rounded-lg">
                 <p class="mt-2 font-semibold">3D Scanner for <span class="text-black">3D Printing</span></p>
                 <button class="mt-3 bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">Know More</button>
             </div>
@@ -1166,7 +1167,8 @@ metrology-grade 3D Scanner  -->
                 </button>
             </div>
             <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center">
-                <img src="./assets/img/3D Scanner for Aerospace/two.png" alt="Freescan Trio" class="h-40 object-contain">
+                <img src="./assets/img/3D Scanner for Aerospace/two.png" alt="Freescan Trio"
+                    class="h-40 object-contain">
                 <button
                     class="bg-gradient-to-b from-orange-400 to-orange-600 text-white py-2 px-4 rounded-lg mt-4 shadow-lg spl_btn">
                     Freescan Trio
@@ -1469,9 +1471,12 @@ metrology-grade 3D Scanner  -->
         </div>
     </footer>
 
-    <a href="https://wa.me/your-number" target="_blank" class="fixed bottom-4 right-4  ">
+    <a href="https://wa.me/your-number" target="_blank" class="hidden md:fixed bottom-4 right-4  ">
         <img src="./assets/img/whatsapp.png" alt="WhatsApp" class="w-16">
     </a>
+
+
+
     <script src="./assets/javascript.js"></script>
 </body>
 
