--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             </div>
         </div>
 
-        <p class="mt-6 text-gray-700">
-            Precise3DM has collaborated with multiple 3D scanner manufacturers worldwide to bring a curated variety of
+        <p class="mt-6 text-xl text-gray-700">
+            Precise3DM has collaborated with multiple 3D scanner manufacturers worldwide to bring a <br> curated variety of
             3D scanners based on various industrial applications to India.
         </p>
 
@@ -133,25 +133,31 @@
 
     <div class="py-10 bg-gray-100 relative">
         <div class="bg-[#1F3B50] text-white p-5 md:p-16 rounded-lg text-center max-w-7xl mx-auto relative">
-          <p class="text-lg md:text-xl">
-            There are many different types of <span class="font-bold text-orange-400">3D Scanner technologies</span>
-            available in the market.
-            Each has its advantages and limitations. Choosing the right Scanner for your application may be challenging.
-            At <span class="font-bold text-orange-400">Precise3DM</span>, we help you select the suitable 3D Scanner based on your
-            budget and application.
-            We are one of <span class="font-bold text-orange-400">the most trusted 3D scanner distributors in India.</span>
-          </p>
+            <p class="text-lg md:text-xl">
+                There are many different types of <span class="font-bold text-orange-400">3D Scanner technologies</span>
+                available in the market.
+                Each has its advantages and limitations. Choosing the right Scanner for your application may be
+                challenging.
+                At <span class="font-bold text-orange-400">Precise3DM</span>, we help you select the suitable 3D Scanner
+                based on your
+                budget and application.
+                We are one of <span class="font-bold text-orange-400">the most trusted 3D scanner distributors in
+                    India.</span>
+            </p>
         </div>
         <!-- Button container: relative on mobile and absolute on md screens -->
-        <div class="relative md:absolute md:inset-x-0 md:bottom-6 flex flex-col md:flex-row justify-center gap-4 mt-4 md:mt-0">
-          <button class="bg-gradient-to-r from-orange-400 to-orange-500 text-white px-6 py-3 rounded-full shadow-md hover:shadow-lg transition spl_btn">
-            3D Scanners By Technology
-          </button>
-          <button class="bg-gradient-to-r from-orange-400 to-orange-500 text-white px-6 py-3 rounded-full shadow-md hover:shadow-lg transition spl_btn">
-            3D Scanner By Applications
-          </button>
+        <div
+            class="relative md:absolute md:inset-x-0 md:bottom-6 flex flex-col md:flex-row justify-center gap-4 mt-4 md:mt-0">
+            <button
+                class="bg-gradient-to-r from-orange-400 to-orange-500 text-white px-6 py-3 rounded-full shadow-md hover:shadow-lg transition spl_btn">
+                3D Scanners By Technology
+            </button>
+            <button
+                class="bg-gradient-to-r from-orange-400 to-orange-500 text-white px-6 py-3 rounded-full shadow-md hover:shadow-lg transition spl_btn">
+                3D Scanner By Applications
+            </button>
         </div>
-      </div>
+    </div>
 
     <!-- Why Consider Precise3DM for your 3D Scanner Purchase? -->
     <div class="py-10">
@@ -1129,7 +1135,8 @@ metrology-grade 3D Scanner  -->
     </div>
 
     <!-- 3D Scanners for Jewellery Design and Manufacturing -->
-    <div class="bg-[#FFF8F2] p-8 rounded-lg max-w-7xl shadow-md flex flex-col md:flex-row gap-8 mx-auto">
+    <div
+        class="bg-[#FFF8F2] p-8 rounded-lg max-w-7xl shadow-md justify-between flex flex-col md:flex-row gap-8 mx-auto">
         <!-- Text Section -->
         <div class="max-w-md">
             <h2 class="text-3xl font-bold text-gray-800">3D Scanners for Jewellery Design and Manufacturing</h2>
@@ -1242,7 +1249,7 @@ metrology-grade 3D Scanner  -->
 
     <!-- Lowcost 3D scanner -->
     <div
-        class="bg-[#FFF8F2] p-8 rounded-lg max-w-7xl shadow-md flex justify-between flex-wrap gap-8 mx-auto p-20 border border-orange-300 my-10">
+        class="bg-[#FFF8F2] p-8 md:p-20 rounded-lg max-w-7xl shadow-md flex flex-col md:flex-row justify-between gap-8 mx-auto border border-orange-300 my-10">
         <!-- Text Section -->
         <div class="max-w-lg">
             <h2 class="text-3xl font-bold text-gray-800">Lowcost 3D scanner</h2>
@@ -1259,10 +1266,10 @@ metrology-grade 3D Scanner  -->
                 Explore our affordable 3D scanner options and discover how they can meet your needs while staying within
                 your budget.
             </p>
-            <div class="mt-6 flex gap-4">
+            <div class="mt-6 flex flex-col sm:flex-row gap-4">
                 <button
                     class="bg-gradient-to-b from-orange-400 to-orange-600 text-white py-2 px-4 rounded-lg shadow-lg spl_btn">
-                    Get Quote & Book Demo
+                    Get Quote &amp; Book Demo
                 </button>
                 <button
                     class="bg-gradient-to-b from-orange-400 to-orange-600 text-white py-2 px-4 rounded-lg shadow-lg spl_btn">
@@ -1272,7 +1279,7 @@ metrology-grade 3D Scanner  -->
         </div>
 
         <!-- Image Section -->
-        <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center">
+        <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center w-full max-w-xs">
             <img src="./assets/img/Lowcost 3D scanner/one.png" alt="Einstar 3D Scanner" class="h-40 object-contain">
             <button
                 class="bg-gradient-to-b from-orange-400 to-orange-600 text-white py-2 px-4 rounded-lg mt-4 shadow-lg spl_btn">
