--- a/index.html
+++ b/index.html
@@ -95,30 +95,28 @@
         <h2 class="text-3xl md:text-5xl font-bold text-indigo-900 pb-2">3D Scanner In India From Precise3DM</h2>
         <p class="text-orange-500 text-lg mt-2 pb-5 text-bold">Get 3D Scanners For Any Application.</p>
 
-        <div
-            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-8 p-5 border border-orange-500 rounded-xl bg-white mx-24">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-8 p-5 border border-orange-500 rounded-xl bg-white mx-4 md:mx-24">
             <!-- Card 1 -->
-            <div class="bg-white  rounded-lg p-4">
-                <img src="./assets/img/hero/first.png" alt="Structured Light 3D Scanner" class="rounded-lg w-full">
-                <p class="mt-4 font-semibold">Structured Light 3D Scanners</p>
+            <div class="bg-white rounded-lg p-4">
+              <img src="./assets/img/hero/first.png" alt="Structured Light 3D Scanner" class="rounded-lg w-full">
+              <p class="mt-4 font-semibold">Structured Light 3D Scanners</p>
             </div>
             <!-- Card 2 -->
-            <div class="bg-white  rounded-lg p-4">
-                <img src="./assets/img/hero/two.png" alt="Industrial Handheld Metrology 3D Scanner"
-                    class="rounded-lg w-full">
-                <p class="mt-4 font-semibold">Industrial Handheld Metrology 3D Scanners (Metrology Grade)</p>
+            <div class="bg-white rounded-lg p-4">
+              <img src="./assets/img/hero/two.png" alt="Industrial Handheld Metrology 3D Scanner" class="rounded-lg w-full">
+              <p class="mt-4 font-semibold">Industrial Handheld Metrology 3D Scanners (Metrology Grade)</p>
             </div>
             <!-- Card 3 -->
             <div class="bg-white rounded-lg p-4">
-                <img src="./assets/img/hero/three.png" alt="Handheld Colour 3D Scanner" class="rounded-lg w-full">
-                <p class="mt-4 font-semibold">Handheld Colour 3D Scanners (Human Body & Texture)</p>
+              <img src="./assets/img/hero/three.png" alt="Handheld Colour 3D Scanner" class="rounded-lg w-full">
+              <p class="mt-4 font-semibold">Handheld Colour 3D Scanners (Human Body & Texture)</p>
             </div>
             <!-- Card 4 -->
-            <div class="bg-white  rounded-lg p-4">
-                <img src="./assets/img/hero/four.png" alt="Freescan Trio Triple Camera" class="rounded-lg w-full">
-                <p class="mt-4 font-semibold">Freescan Trio Triple Camera - Stickerless Handheld Laser 3D Scanner</p>
+            <div class="bg-white rounded-lg p-4">
+              <img src="./assets/img/hero/four.png" alt="Freescan Trio Triple Camera" class="rounded-lg w-full">
+              <p class="mt-4 font-semibold">Freescan Trio Triple Camera - Stickerless Handheld Laser 3D Scanner</p>
             </div>
-        </div>
+          </div>
 
         <p class="mt-6 text-xl text-gray-700">
             Precise3DM has collaborated with multiple 3D scanner manufacturers worldwide to bring a <br> curated variety of
@@ -160,7 +158,7 @@
     </div>
 
     <!-- Why Consider Precise3DM for your 3D Scanner Purchase? -->
-    <div class="py-10">
+    <div class="md:py-10">
         <div class="max-w-7xl mx-auto bg-white border border-orange-300 rounded-2xl p-6 ">
             <h2 class="text-center text-3xl font-semibold text-gray-900">
                 Why Consider <span class="text-[#f49834]">Precise3DM</span> for your 3D Scanner Purchase?
