--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         </div>
                     </div>
                     <!-- Right Section: Infinite Wave Animation -->
-                    <div class="relative flex justify-center items-center w-48 h-48">
+                    <div class="relative flex justify-center items-center w-32 h-32 sm:w-40 sm:h-40">
                         <div class="absolute w-full h-full">
                             <div class="wave"></div>
                             <div class="wave"></div>
@@ -294,16 +294,16 @@
                         </div>
                     </div>
                     <!-- Right Section: Infinite Wave Animation -->
-                    <div class="relative flex justify-center items-center w-48 h-48">
+                    <div class="relative flex justify-center items-center w-32 h-32 sm:w-40 sm:h-40">
                         <div class="absolute w-full h-full">
-                            <div class="wave"></div>
-                            <div class="wave"></div>
-                            <div class="wave"></div>
+                          <div class="wave"></div>
+                          <div class="wave"></div>
+                          <div class="wave"></div>
                         </div>
                         <div class="ui-overlay relative">
-                            <img src="./assets/img/foranimation_two.png" alt="UI Mockup" class="w-full">
+                          <img src="./assets/img/foranimation_two.png" alt="UI Mockup" class="w-full">
                         </div>
-                    </div>
+                      </div>
                 </div>
             </div>
             <div id="tab3" class="content">
@@ -323,7 +323,7 @@
                         </div>
                     </div>
                     <!-- Right Section: Infinite Wave Animation -->
-                    <div class="relative flex justify-center items-center w-48 h-48">
+                    <div class="relative flex justify-center items-center w-32 h-32 sm:w-40 sm:h-40">
                         <div class="absolute w-full h-full">
                             <div class="wave"></div>
                             <div class="wave"></div>
@@ -353,7 +353,7 @@
                         </div>
                     </div>
                     <!-- Right Section: Infinite Wave Animation -->
-                    <div class="relative flex justify-center items-center w-48 h-48">
+                    <div class="relative flex justify-center items-center w-32 h-32 sm:w-40 sm:h-40">
                         <div class="absolute w-full h-full">
                             <div class="wave"></div>
                             <div class="wave"></div>
@@ -382,7 +382,7 @@
                         </div>
                     </div>
                     <!-- Right Section: Infinite Wave Animation -->
-                    <div class="relative flex justify-center items-center w-48 h-48">
+                    <div class="relative flex justify-center items-center w-32 h-32 sm:w-40 sm:h-40">
                         <div class="absolute w-full h-full">
                             <div class="wave"></div>
                             <div class="wave"></div>
@@ -411,7 +411,7 @@
                         </div>
                     </div>
                     <!-- Right Section: Infinite Wave Animation -->
-                    <div class="relative flex justify-center items-center w-48 h-48">
+                    <div class="relative flex justify-center items-center w-32 h-32 sm:w-40 sm:h-40">
                         <div class="absolute w-full h-full">
                             <div class="wave"></div>
                             <div class="wave"></div>
@@ -437,65 +437,53 @@
     </div>
 
     <!-- 3D Scanner By Technology -->
-    <div class="bg-orange-50 p-20 rounded-lg shadow-md max-w-7xl mx-auto border border-orange-300 my-10">
-        <h2 class="text-center text-xl font-semibold mb-6 bg-white inline-block px-4 py-2 rounded-lg shadow-md">
-            3D Scanner By Technology
+    <div class="bg-orange-50 p-8 md:p-20 rounded-lg shadow-md max-w-7xl mx-auto border border-orange-300 my-10">
+        <h2 class="text-center text-xl md:text-2xl font-semibold mb-6 bg-white inline-block px-4 py-2 rounded-lg shadow-md">
+          3D Scanner By Technology
         </h2>
-
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
-            <!-- Card 1 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                <img src="./assets/img/3D Scanner By Technology/one.png" alt="Structured Light 3D Scanners"
-                    class="w-full h-48 object-cover">
-                <div class="p-4 text-center">
-                    <h3 class="text-sm font-semibold text-gray-700">Structured Light 3D Scanners</h3>
-                    <button
-                        class="mt-4 bg-orange-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-orange-600 spl_btn">
-                        Know More
-                    </button>
-                </div>
+          <!-- Card 1 -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+            <img src="./assets/img/3D Scanner By Technology/one.png" alt="Structured Light 3D Scanners" class="w-full h-48 object-cover">
+            <div class="p-4 text-center">
+              <h3 class="text-sm font-semibold text-gray-700">Structured Light 3D Scanners</h3>
+              <button class="mt-4 bg-orange-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-orange-600 spl_btn">
+                Know More
+              </button>
             </div>
-
-            <!-- Card 2 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                <img src="./assets/img/3D Scanner By Technology/two.png "
-                    alt="Industrial Handheld Metrology 3D Scanners" class="w-full h-48 object-cover">
-                <div class="p-4 text-center">
-                    <h3 class="text-sm font-semibold text-gray-700">Industrial Metrology 3D Scanners</h3>
-                    <button
-                        class="mt-4 bg-orange-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-orange-600 spl_btn">
-                        Know More
-                    </button>
-                </div>
+          </div>
+          <!-- Card 2 -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+            <img src="./assets/img/3D Scanner By Technology/two.png" alt="Industrial Handheld Metrology 3D Scanners" class="w-full h-48 object-cover">
+            <div class="p-4 text-center">
+              <h3 class="text-sm font-semibold text-gray-700">Industrial Metrology 3D Scanners</h3>
+              <button class="mt-4 bg-orange-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-orange-600 spl_btn">
+                Know More
+              </button>
             </div>
-
-            <!-- Card 3 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                <img src="./assets/img/3D Scanner By Technology/three.png" alt="Handheld Colour 3D Scanners"
-                    class="w-full h-48 object-cover">
-                <div class="p-4 text-center">
-                    <h3 class="text-sm font-semibold text-gray-700">Handheld Colour 3D Scanners</h3>
-                    <button
-                        class="mt-4 bg-orange-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-orange-600 spl_btn">
-                        Know More
-                    </button>
-                </div>
+          </div>
+          <!-- Card 3 -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+            <img src="./assets/img/3D Scanner By Technology/three.png" alt="Handheld Colour 3D Scanners" class="w-full h-48 object-cover">
+            <div class="p-4 text-center">
+              <h3 class="text-sm font-semibold text-gray-700">Handheld Colour 3D Scanners</h3>
+              <button class="mt-4 bg-orange-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-orange-600 spl_btn">
+                Know More
+              </button>
             </div>
-
-            <!-- Card 4 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                <img src="./assets/img/3D Scanner By Technology/four.png" alt="Freescan Trio Triple Camera"
-                    class="w-full h-48 object-cover">
-                <div class="p-4 text-center">
-                    <h3 class="text-sm font-semibold text-gray-700">Freescan Trio Triple Camera</h3>
-                    <button
-                        class="mt-4 bg-orange-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-orange-600 spl_btn">
-                        Know More
-                    </button>
-                </div>
+          </div>
+          <!-- Card 4 -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+            <img src="./assets/img/3D Scanner By Technology/four.png" alt="Freescan Trio Triple Camera" class="w-full h-48 object-cover">
+            <div class="p-4 text-center">
+              <h3 class="text-sm font-semibold text-gray-700">Freescan Trio Triple Camera</h3>
+              <button class="mt-4 bg-orange-500 text-white px-4 py-2 rounded-lg shadow-md hover:bg-orange-600 spl_btn">
+                Know More
+              </button>
             </div>
+          </div>
         </div>
-    </div>
+      </div>
 
     <!--Structured Light 3D Scanners  -->
     <div class="bg-orange-50 p-8 rounded-lg shadow-md max-w-7xl mx-auto border border-orange-300 my-10">
@@ -1499,7 +1487,7 @@ metrology-grade 3D Scanner  -->
 
 
 
-    <a href="https://wa.me/your-number" target="_blank" class="hidden md:fixed bottom-4 right-4  ">
+    <a href="https://wa.me/your-number" target="_blank" class="md:fixed bottom-4 right-4  ">
         <img src="./assets/img/whatsapp.png" alt="WhatsApp" class="w-16">
     </a>
 
