--- a/index.html
+++ b/index.html
@@ -816,58 +816,57 @@ metrology-grade 3D Scanner  -->
     </div>
 
     <!-- 3D Scanners for Reverse Engineering -->
-    <div class="bg-[#FFF8F2] shadow-lg rounded-lg p-6 max-w-7xl mx-auto p-20 border border-orange-300 my-10">
+    <div class="bg-[#FFF8F2] shadow-lg rounded-lg max-w-7xl mx-auto px-6 py-8 md:px-20 md:py-20 border border-orange-300 my-10">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-            <!-- Left Section -->
-            <div class="flex justify-center justify-between flex-col">
-                <h2 class="text-2xl font-bold mb-4">3D Scanners for Reverse Engineering</h2>
-
-                <p class="text-gray-700 mb-4">
-                    When you are looking for a 3D scanner for reverse engineering, it's essential to ensure that the 3D
-                    Scanner is paired with the right 3D reverse engineering software. This combination determines how
-                    effectively you can capture, process, and utilize 3D Scan data for 3D Reverse Engineering since the
-                    Reverse engineering process varies depending on the use case. Working with the partial 3D scan data
-                    may suffice for a few applications, such as design intent and fully parametric modeling. However,
-                    for more applications like Nurbs modelling, As-built modelling users need highly detailed 3D Scan
-                    results. At Precise3DM, we understand the importance of finding the right combination of hardware
-                    and software to suit your specific requirements and budget. With our extensive experience and
-                    product range, we can help you identify the best 3D Scanner for reverse engineering applications.
-                    Let Precise3DM guide you in choosing the optimal 3D scanning solution to meet your application
-                    needs, whether you're working on product development, legacy part recreation, or industrial design.
-                </p>
-                <div class="flex gap-4">
-                    <button class="bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">Get Quote & Book Demo</button>
-                    <button class="bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">Know More</button>
-                </div>
-
-
+          <!-- Left Section -->
+          <div class="flex flex-col justify-center">
+            <h2 class="text-2xl font-bold mb-4">3D Scanners for Reverse Engineering</h2>
+            <p class="text-gray-700 mb-4">
+              When you are looking for a 3D scanner for reverse engineering, it's essential to ensure that the 3D Scanner is paired with the right 3D reverse engineering software. This combination determines how effectively you can capture, process, and utilize 3D scan data for 3D Reverse Engineering since the reverse engineering process varies depending on the use case. Working with partial 3D scan data may suffice for a few applications such as design intent and fully parametric modeling. However, for more applications like Nurbs or as-built modelling, users need highly detailed 3D scan results. At Precise3DM, we understand the importance of finding the right combination of hardware and software to suit your specific requirements and budget. Let Precise3DM guide you in choosing the optimal 3D scanning solution to meet your application needs—whether you're working on product development, legacy part recreation, or industrial design.
+            </p>
+            <div class="flex flex-col sm:flex-row gap-4">
+              <button class="bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">
+                Get Quote & Book Demo
+              </button>
+              <button class="bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">
+                Know More
+              </button>
             </div>
-
-            <!-- Right Section (Scanners) -->
-            <div class="grid grid-cols-2 gap-4">
-                <div class="bg-orange-50 p-4 rounded-lg text-center shadow-md">
-                    <img src="./assets/img/3D Scanners for Reverse Engineering/one.png" alt="Transcan C"
-                        class="mx-auto rounded-lg">
-                    <button class="mt-3 bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">Transcan C</button>
-                </div>
-                <div class="bg-orange-50 p-4 rounded-lg text-center shadow-md">
-                    <img src="./assets/img/3D Scanners for Reverse Engineering/two.png" alt="Optiscan5M Plus"
-                        class="mx-auto rounded-lg">
-                    <button class="mt-3 bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">Optiscan5M Plus</button>
-                </div>
-                <div class="bg-orange-50 p-4 rounded-lg text-center shadow-md">
-                    <img src="./assets/img/3D Scanners for Reverse Engineering/three.png" alt="EinScan H2"
-                        class="mx-auto rounded-lg">
-                    <button class="mt-3 bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">EinScan H2</button>
-                </div>
-                <div class="bg-orange-50 p-4 rounded-lg text-center shadow-md">
-                    <img src="./assets/img/3D Scanners for Reverse Engineering/four.png" alt="Freescan Trio"
-                        class="mx-auto rounded-lg">
-                    <button class="mt-3 bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">Freescan Trio</button>
-                </div>
+          </div>
+      
+          <!-- Right Section (Scanners) -->
+          <div class="grid grid-cols-2 gap-4">
+            <!-- Card 1 -->
+            <div class="bg-orange-50 p-4 rounded-lg text-center shadow-md">
+              <img src="./assets/img/3D Scanners for Reverse Engineering/one.png" alt="Transcan C" class="mx-auto rounded-lg">
+              <button class="mt-3 bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">
+                Transcan C
+              </button>
             </div>
+            <!-- Card 2 -->
+            <div class="bg-orange-50 p-4 rounded-lg text-center shadow-md">
+              <img src="./assets/img/3D Scanners for Reverse Engineering/two.png" alt="Optiscan5M Plus" class="mx-auto rounded-lg">
+              <button class="mt-3 bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">
+                Optiscan5M Plus
+              </button>
+            </div>
+            <!-- Card 3 -->
+            <div class="bg-orange-50 p-4 rounded-lg text-center shadow-md">
+              <img src="./assets/img/3D Scanners for Reverse Engineering/three.png" alt="EinScan H2" class="mx-auto rounded-lg">
+              <button class="mt-3 bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">
+                EinScan H2
+              </button>
+            </div>
+            <!-- Card 4 -->
+            <div class="bg-orange-50 p-4 rounded-lg text-center shadow-md">
+              <img src="./assets/img/3D Scanners for Reverse Engineering/four.png" alt="Freescan Trio" class="mx-auto rounded-lg">
+              <button class="mt-3 bg-orange-500 text-white px-4 py-2 rounded-lg spl_btn">
+                Freescan Trio
+              </button>
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
 
     <!-- 3D Scanners for Quality Control -->
     <div class="bg-[#FFF8F2] p-8 rounded-2xl shadow-lg max-w-7xl w-full mx-auto p-20 border border-orange-300 my-10">
