--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </section>
 
     <!-- Navbar -->
-    <nav class="footer p-4">
+    <nav class="bg-[linear-gradient(180deg,_#3B3B3B_-14.65%,_#202020_41.32%,_#202020_62.03%)] p-4">
         <div class="container mx-auto flex items-center justify-between">
             <!-- Logo -->
             <a href="#" class="flex items-center text-orange-500 text-2xl font-bold">
@@ -1433,7 +1433,7 @@ There is no such thing as the best 3D Scanner in the market. The user has to sel
     </div>
 
     <!-- Footer -->
-    <footer class=" py-10">
+    <footer class="bg-[linear-gradient(180deg,_#3B3B3B_-14.65%,_#202020_41.32%,_#202020_62.03%)] py-10">
         <div class="container mx-auto px-6 md:px-12 lg:px-20 flex flex-wrap justify-between">
             <!-- Company Info -->
             <div class="w-full sm:w-1/2 md:w-1/4 mb-6">
