--- a/index.html
+++ b/index.html
@@ -957,7 +957,6 @@ metrology-grade 3D Scanner  -->
         </div>
     </div>
 
-
     <div class="max-w-7xl  p-8 bg-[#FFF8F2] rounded-lg shadow-md border border-orange-100 mx-auto">
         <div class="grid md:grid-cols-2 gap-8 items-center">
             <div>
@@ -1188,7 +1187,6 @@ metrology-grade 3D Scanner  -->
         </div>
     </div>
 
-
     <!-- 3D Scanner for Aerospace -->
     <div
         class="bg-[#FFF8F2] p-8 rounded-lg max-w-7xl shadow-md flex flex-wrap gap-8 mx-auto p-20 border border-orange-300 my-10">
@@ -1256,7 +1254,6 @@ metrology-grade 3D Scanner  -->
             </div>
         </div>
     </div>
-
 
     <!-- Lowcost 3D scanner -->
     <div
@@ -1374,8 +1371,11 @@ metrology-grade 3D Scanner  -->
                     <span>+ What is the Best 3D Scanner in the market?</span>
                 </button>
                 <div class="faq-content hidden p-4 text-gray-600">
-                 
-There is no such thing as the best 3D Scanner in the market. The user has to select the best 3D Scanner based on his application, components' size, usage, scanning environment, and the 3D Scanning technology he wants to use. Based on the above factors, Precise3DM can suggest the best 3D Scanner for your requirements.
+
+                    There is no such thing as the best 3D Scanner in the market. The user has to select the best 3D
+                    Scanner based on his application, components' size, usage, scanning environment, and the 3D Scanning
+                    technology he wants to use. Based on the above factors, Precise3DM can suggest the best 3D Scanner
+                    for your requirements.
 
 
                 </div>
