--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Navbar -->
     <nav class="bg-[linear-gradient(180deg,_#3B3B3B_-14.65%,_#202020_41.32%,_#202020_62.03%)] p-4">
-        <div class="container mx-auto flex items-center gap-4">
+        <div class="container mx-auto flex items-center justify-between">
             <!-- Logo -->
             <a href="#" class="flex items-center text-orange-500 text-2xl font-bold">
                 <img src="./assets/img/Precise Logos-08.png" alt="Logo" class="h-8 mr-2">
@@ -35,7 +35,7 @@
             </div>
         </div>
         <!-- Mobile Menu -->
-        <div id="mobile-menu" class="md:hidden hidden flex-col bg-gray-900 text-white">
+        <div id="mobile-menu" class="hidden md:hidden flex-col bg-gray-900 text-white">
             <a href="#" class="block px-4 py-2 hover:bg-gray-700">Home</a>
             <a href="#" class="block px-4 py-2 hover:bg-gray-700">3D Products</a>
             <a href="#" class="block px-4 py-2 hover:bg-gray-700">3D Solutions</a>
@@ -48,7 +48,7 @@
     <!-- hero -->
     <div class="p-5">
 
-        <div class="bg-img text-white rounded-2xl">
+        <div class="bg-img text-white rounded-3xl">
 
             <div class="h-screen ">
                 <div class="hidden md:flex items-center justify-end p-0 md:p-6">
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-between md:justify-around">
-                    <h1 class="text-5xl text-white text-center font-bold">
+                    <h1 class="text-5xl text-white text-center font-bold mt-8 md:m-0">
                         Structured Light 3D Scanners
                     </h1>
 
@@ -108,7 +108,7 @@
 
     </div>
 
-    <!-- hero below -->
+    <!-- overview-->
     <div class="container mx-auto px-5 md:px-28 py-10">
         <div>
             <h1 class="text-4xl font-bold mb-5">Overview</h1>
@@ -125,117 +125,203 @@
         </div>
     </div>
 
-    <!-- What are Structured Light 3D Scanners? -->
-    <div class="container mx-auto px-5 py-10 h-52 mx-4 my-10">
-        <div class="bg-img2 flex flex-col items-center justify-center text-white text-center">
-            <h1 class="text-3xl font-bold">What are Structured Light 3D Scanners?</h1>
-            <p class="mt-2">Structured</p>
+    <!-- overview below -->
+    <div class="container mx-auto px-5 md:px-20  py-10  mx-4 my-10">
+        <div class="bg-img4 flex flex-col rounded-3xl items-center justify-center text-white text-center md:px-1 px-26">
+            <h1 class="text-2xl md:text-4xl mb-1 font-bold">
+                What are Structured Light 3D Scanners?
+            </h1>
+            <p class="mt-2 p-5 text-center">A 3D scanner that flashes Structured Light patterns into the object  to 3D
+                scan  the shape of an object</p>
+
         </div>
+
     </div>
 
     <!-- how it works -->
-    <div class="container mx-auto px-5">
+    <div class="container mx-auto md:px-5">
 
         <h1 class="text-center font-bold text-4xl">How it works?</h1>
 
-        <div class="md:flex justify-center gap-2 px-0 md:px-20">
+        <div class="md:flex md:gap-0 md:gap-3 justify-center px-1 md:px-20 py-1 md:py-20 ">
 
-            <div>
-                <div class="flex justify-center">
-                    <img src="./assets/img/how_it1.png" alt="">
+            <div class="md:w-1/2 p-5 ">
+                <div class="border rounded-3xl shadow">
+                    <div class="flex justify-center p-3">
+                        <img src="./assets/img/how_it1.png" alt="">
+                    </div>
+
+                    <div class="">
+                        <h1 class="text-3xl font-bold mb-3 px-8 py-3">Light Patterns</h1>
+                        <p class="px-8 py-4">The scanner projects a pattern of light (like stripes or grids) onto the object. Imagine
+                            shining
+                            a
+                            flashlight through a piece of paper with a grid pattern —it creates a pattern on the object.
+                        </p>
+                    </div>
                 </div>
 
-                <h1>Light Patterns</h1>
-                <p>The scanner projects a pattern of light (like stripes or grids) onto the object. Imagine shining a
-                    flashlight through a piece of paper with a grid pattern —it creates a pattern on the object.</p>
+
             </div>
 
-            <div>
-                <div class="flex justify-center">
-                    <img src="./assets/img/how_it2.png" alt="">
+            <div class="md:w-1/2 p-5 ">
+                <div class="border rounded-3xl shadow">
+                    <div class="flex justify-center p-3">
+                        <img src="./assets/img/how_it2.png" alt="">
+                    </div>
+                    <div class="p-3">
+                        <p>Now imagine projecting the same grid pattern of light onto the shaped object. The grid
+                            pattern
+                            will
+                            look wavy and distorted.</p>
+                        <h1 class="text-3xl font-bold mb-3">Camera Capture</h1>
+                        <p>
+                            A camera in the scanner looks at how the light pattern bends or changes as it falls on the
+                            object.
+                            If the object is flat, the lines stay straight. But if the object has curves or bumps, the
+                            lines
+                            will look wavy or distorted.
+                        </p>
+
+                    </div>
                 </div>
 
-                <h1>Camera Capture</h1>
-                <p>
-                    A camera in the scanner looks at how the light pattern bends or changes as it falls on the object.
-                    If the object is flat, the lines stay straight. But if the object has curves or bumps, the lines
-                    will look wavy or distorted.
-                </p>
+
             </div>
 
         </div>
 
-        <div class="md:flex justify-center gap-2 px-0 md:px-20">
+        <div class="md:flex justify-center  px-0 md:px-20">
 
-            <div>
-                <div class="flex justify-center">
-                    <img src="./assets/img/how_it3.png" alt="">
+            <div class="md:w-1/2 p-5 ">
+                <div class="border  rounded-3xl shadow">
+                    <div class="flex justify-center p-3 rounded-3xl">
+                        <img src="./assets/img/how_it3.png" alt="">
+                    </div>
+                    <div class="p-3">
+                        <h1 class="text-3xl font-bold mb-3">Measurements</h1>
+                        <p>The scanner uses the distorted light pattern to calculate the shape of the object. It’s like
+                            figuring
+                            out how tall a mountain is by looking at how its shadow changes.</p>
+                    </div>
                 </div>
 
-                <h1>Measurements</h1>
-                <p>The scanner uses the distorted light pattern to calculate the shape of the object. It’s like figuring
-                    out how tall a mountain is by looking at how its shadow changes.</p>
+
             </div>
 
-            <div>
-                <div class="flex justify-center">
-                    <img src="./assets/img/how_it4.png" alt="">
+            <div class="md:w-1/2 p-5 ">
+                <div class="border rounded-3xl shadow">
+                    <div class="flex justify-center p-3">
+                        <img src="./assets/img/how_it4.png" alt="">
+                    </div>
+                    <div class="p-3">
+
+                        <h1 class="text-3xl font-bold mb-5">3D Model</h1>
+                        <p>
+                            Finally, the scanner combines all this information to create a detailed 3D model of the
+                            object
+                            on
+                            the computer.
+                        </p>
+
+
+                    </div>
                 </div>
-                <h1>3D Model</h1>
-                <p>
-                    Finally, the scanner combines all this information to create a detailed 3D model of the object on
-                    the computer.
-                </p>
+
+
+            </div>
+
+        </div>
+
+    </div>
+    <!-- When and Why Do You Need Structured Light 3D Scanners? -->
+    <div class="container mx-auto px-5 md:px-20  py-10  mx-4 my-10">
+        <div class="bg-img3 flex flex-col rounded-3xl items-center justify-center text-white text-center md:px-1 px-26">
+            <h1 class="text-2xl md:text-4xl md:mb-1 mb-0 font-bold">When and Why Do You Need Structured Light 3D Scanners?</h1>
+            <p class="  text-start md:text-xl text-xs md:p-5 px-5 py-1 md:p-0">A 3D scanner that flashes Structured Light patterns into the object  to 3D
+                scan  the
+                shape of an object</p>
+            <div class="text-start md:text-xl text-xs p-5 md:p-0">
+                <p class="">🔘 3D Scanning of small parts requires high precision.</p>
+                <p>🔘 Capturing highly detailed objects for intricate shapes and structure</p>
+                <p>🔘 When high accuracy is required to take the measurement</p>
+                <p>🔘 You need to set up an in-house system for machined parts in a controlled environment, like a CMM
+                    (Coordinate Measuring Machine).</p>
             </div>
 
         </div>
 
     </div>
 
-    <!-- Structured Light 3D Scanners Precise3DM Offers -->
-    <section>
-        <div class="container">
-            <div class="bor">
-                <h1>Cost Effective Structured Light 3D Scanner</h1>
-                <h1 class="org">Transcan c</h1>
-                <button class="btn1">Know More</button>
+    <h1 class="text-center md:text-4xl text-2xl font-bold">Structured Light 3D Scanners <br>Precise3DM Offers</h1>
+
+    <!-- 1 Structured Light 3D Scanners Precise3DM Offers -->
+    <div class="container mx-auto px-5 md:px-20  py-10 ">
+        <div
+            class="bg-[linear-gradient(180deg,_#3B3B3B_-14.65%,_#202020_41.32%,_#202020_62.03%)] flex flex-col rounded-3xl items-start justify-center text-white text-center md:px-1 py-20  px-26">
+
+
+            <h1 class="text-2xl text-start md:text-4xl mb-1 ms-5 font-bold p-2">Cost Effective Structured Light 3D
+                Scanner</h1>
+            <p class="mt-2 ms-5 p-2 text-start p-2 my-5 text-2xl orange">Transcan C</p>
+
+            <div>
+                <button class="orange-btn ms-5 p-2 rounded-xl">Know more</button>
             </div>
         </div>
-    </section>
+
+    </div>
+
+    <!-- 2 Structured Light 3D Scanners Precise3DM Offers -->
+    <div class="container mx-auto px-5 md:px-20  py-10 ">
+        <div
+            class="bg-[linear-gradient(180deg,_#3B3B3B_-14.65%,_#202020_41.32%,_#202020_62.03%)] flex flex-col rounded-3xl items-end justify-center text-white text-center md:px-1 py-20  px-26">
+
+
+            <h1 class="text-2xl text-start md:text-4xl mb-1 me-5 font-bold p-2">Structured Light 3D Scanners
+            </h1>
+            <p class="mt-2 me-5 p-2 text-start p-2 my-5 text-2xl orange">Optim Sca5m PLUS
+            </p>
+
+            <div>
+                <button class="orange-btn me-5 p-2 rounded-xl">Know more</button>
+            </div>
+        </div>
+
+    </div>
 
 
     <!-- Blog -->
-    <div class="bor1">
-        <h1>Structured Light 3D Scanners</h1>
-        <h1 class="org">Optim Sca5m PLUS </h1>
-        <button class="btn1">Know More</button>
-    </div>
-    <div class="bor2 ">
-        <div class="back-img ">
-            <div class="marg">
-                <h1 class="bol">When and Why Do You Need Structured Light <span class="org"> 3D Scanners?</span></h1>
-                <p>A 3D scanner that flashes Structured Light patterns into the object  to 3D scan  the shape of an
-                    object</p>
+    <div class="container mx-auto px-5 md:px-20  py-10 ">
+        <div class="flex flex-wrap md:gap-0 gap-3 justify-between">
+            <div class="md:w-1/3">
+                <div class="flex justify-center">
 
-                <div class="d-flex">
-                    <!-- <img src="./assets/img/blog_1.jpeg"> -->
-                    <p>3D Scanning of small parts requires high precision.</p>
+                    <img src="./assets/img/blog_1.jpeg" alt="" class="w-[380px]  rounded-xl">
                 </div>
-                <div class="d">
-                    <!-- <img src="./assets/img/blog_2.png"> -->
-                    <p>Capturing highly detailed objects for intricate shapes and structure</p>
-                </div>
-                <div class="d-flex">
-                    <img src="./Vector (1).png">
-                    <p>When high accuracy is required to take the measurement</p>
-                </div>
-                <div class="d-flex">
-                    <img src="./Vector (1).png">
-                    <p>You need to set up an in-house system for machined parts in a controlled environment, like a CMM
-                        (Coordinate Measuring Machine)</p>
-                </div>
+                <p class="py-5 md:ms-8">EinScan H2 for Facial Prosthetic Applications"</p>
+
+                <button class="bg-orange-100 px-8 border  border-orange-300 py-3 md:ms-8">Read More</button>
             </div>
+            <div class="md:w-1/3">
+                <div class="flex justify-center">
+                    <img src="./assets/img/blog_2.png" alt="" class="w-[380px]  rounded-xl">
+                </div>
+                <p class="py-5 md:ms-8">EinScan H2 for Facial Prosthetic Applications"</p>
+
+                <button class="bg-orange-100 px-8 border  border-orange-300 py-3 md:ms-8">Read More</button>
+            </div>
+            <div class="md:w-1/3">
+                <div class="flex justify-center">
+                    <img src="./assets/img/blog_3.jpeg" alt="" class="w-[380px]    rounded-xl">
+                </div>
+                <p class="py-5 md:ms-8">EinScan H2 for Facial Prosthetic Applications"</p>
+
+                <button class="bg-orange-100 px-8 border  border-orange-300 py-3 md:ms-8">Read More</button>
+            </div>
+            
         </div>
+
     </div>
 
     <!-- Footer -->
