--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -58,7 +63,8 @@
                         </div>
                         <div>
                             <p class="font-bold text-white">Speak to the sales team</p>
-                            <p class="text-lg font-semibold text-white">+91 9840478347 / +91 7395972777</p>
+                            <p class="text-lg font-semibold text-white">+91 9840478347 <span class="orange">|</span> +91
+                                7395972777</p>
                         </div>
                     </div>
                 </div>
@@ -93,11 +99,12 @@
 
                     <div class="flex items-center gap-4 b p-4 rounded-lg">
                         <div class="w-12 h-12 flex items-center justify-center bg-orange-500 rounded-full text-white">
-                            <button class=" spl_btn "><i class="fas fa-phone text-xl"></i></button>
+                            <button class=" spl_btn "><i class="fa-regular fa-envelope"></i></button>
                         </div>
                         <div>
-                            <p class="font-bold text-white">Speak to the sales team</p>
-                            <p class="text-lg font-semibold text-white">+91 9840478347 / +91 7395972777</p>
+                            <p class="font-bold text-white">Email us</p>
+                            <p class="text-lg font-semibold text-white">sm@precise3dm.com <span class="orange">|</span>
+                                sales@precisd3dm.com</p>
                         </div>
                     </div>
                 </div>
@@ -109,7 +116,7 @@
     </div>
 
     <!-- overview-->
-    <div class="container mx-auto px-5 md:px-28 py-10">
+    <div class="container mx-auto px-5 md:px-44 py-10">
         <div>
             <h1 class="text-4xl font-bold mb-5">Overview</h1>
             <p class="font-bold">Structured Light 3D Scanners, also known as <span class="orange">Optical 3D
@@ -139,134 +146,105 @@
     </div>
 
     <!-- how it works -->
-    <div class="container mx-auto md:px-5">
-
-        <h1 class="text-center font-bold text-4xl">How it works?</h1>
-
-        <div class="md:flex md:gap-0 md:gap-3 justify-center px-1 md:px-20 py-1 md:py-20 ">
-
-            <div class="md:w-1/2 p-5 ">
-                <div class="border rounded-3xl shadow">
-                    <div class="flex justify-center p-3">
-                        <img src="./assets/img/how_it1.png" alt="">
-                    </div>
-
-                    <div class="">
-                        <h1 class="text-3xl font-bold mb-3 px-8 py-3">Light Patterns</h1>
-                        <p class="px-8 py-4">The scanner projects a pattern of light (like stripes or grids) onto the object. Imagine
-                            shining
-                            a
-                            flashlight through a piece of paper with a grid pattern —it creates a pattern on the object.
-                        </p>
-                    </div>
+    <div class="container mx-auto px-5 md:px-20 py-10">
+        <h1 class="text-center font-bold text-4xl mb-10">How it works?</h1>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+            <div class="border rounded-3xl  external_shadow">
+                <div class="flex justify-center p-3">
+                    <img src="./assets/img/how_it1.png" alt="">
                 </div>
-
-
-            </div>
-
-            <div class="md:w-1/2 p-5 ">
-                <div class="border rounded-3xl shadow">
-                    <div class="flex justify-center p-3">
-                        <img src="./assets/img/how_it2.png" alt="">
-                    </div>
-                    <div class="p-3">
-                        <p>Now imagine projecting the same grid pattern of light onto the shaped object. The grid
-                            pattern
-                            will
-                            look wavy and distorted.</p>
-                        <h1 class="text-3xl font-bold mb-3">Camera Capture</h1>
-                        <p>
-                            A camera in the scanner looks at how the light pattern bends or changes as it falls on the
-                            object.
-                            If the object is flat, the lines stay straight. But if the object has curves or bumps, the
-                            lines
-                            will look wavy or distorted.
-                        </p>
-
-                    </div>
+                <div class="p-4">
+                    <h1 class="text-3xl font-bold mb-3">Light Patterns</h1>
+                    <p>
+                        The scanner projects a pattern of light (like stripes or grids) onto the object.
+                        Imagine shining a flashlight through a piece of paper with a grid pattern — it creates a pattern
+                        on the object.
+                    </p>
                 </div>
-
-
             </div>
-
+            <div class="border rounded-3xl external_shadow">
+                <div class="flex justify-center p-3">
+                    <img src="./assets/img/how_it2.png" alt="">
+                </div>
+                <div class="p-4">
+                    <p>
+                        Now imagine projecting the same grid pattern of light onto the shaped object.
+                        The grid pattern will look wavy and distorted.
+                    </p>
+                    <h1 class="text-3xl font-bold mt-4 mb-3">Camera Capture</h1>
+                    <p>
+                        A camera in the scanner observes how the light pattern bends or changes.
+                        If the object is flat, the lines stay straight; if it has curves or bumps, the lines appear
+                        distorted.
+                    </p>
+                </div>
+            </div>
+            <div class="border rounded-3xl external_shadow">
+                <div class="flex justify-center p-3">
+                    <img src="./assets/img/how_it3.png" alt="">
+                </div>
+                <div class="p-4">
+                    <h1 class="text-3xl font-bold mb-3">Measurements</h1>
+                    <p>
+                        The scanner uses the distorted light pattern to calculate the object's shape.
+                        It's like figuring out the height of a mountain by examining its shadow.
+                    </p>
+                </div>
+            </div>
+            <div class="border rounded-3xl external_shadow">
+                <div class="flex justify-center p-3">
+                    <img src="./assets/img/how_it4.png" alt="">
+                </div>
+                <div class="p-4">
+                    <h1 class="text-3xl font-bold mb-3">3D Model</h1>
+                    <p>
+                        Finally, the scanner combines this information to create a detailed 3D model of the object on
+                        the computer.
+                    </p>
+                </div>
+            </div>
         </div>
-
-        <div class="md:flex justify-center  px-0 md:px-20">
-
-            <div class="md:w-1/2 p-5 ">
-                <div class="border  rounded-3xl shadow">
-                    <div class="flex justify-center p-3 rounded-3xl">
-                        <img src="./assets/img/how_it3.png" alt="">
-                    </div>
-                    <div class="p-3">
-                        <h1 class="text-3xl font-bold mb-3">Measurements</h1>
-                        <p>The scanner uses the distorted light pattern to calculate the shape of the object. It’s like
-                            figuring
-                            out how tall a mountain is by looking at how its shadow changes.</p>
-                    </div>
-                </div>
-
-
-            </div>
-
-            <div class="md:w-1/2 p-5 ">
-                <div class="border rounded-3xl shadow">
-                    <div class="flex justify-center p-3">
-                        <img src="./assets/img/how_it4.png" alt="">
-                    </div>
-                    <div class="p-3">
-
-                        <h1 class="text-3xl font-bold mb-5">3D Model</h1>
-                        <p>
-                            Finally, the scanner combines all this information to create a detailed 3D model of the
-                            object
-                            on
-                            the computer.
-                        </p>
-
-
-                    </div>
-                </div>
-
-
-            </div>
-
-        </div>
-
     </div>
     <!-- When and Why Do You Need Structured Light 3D Scanners? -->
     <div class="container mx-auto px-5 md:px-20  py-10  mx-4 my-10">
         <div class="bg-img3 flex flex-col rounded-3xl items-center justify-center text-white text-center md:px-1 px-26">
-            <h1 class="text-2xl md:text-4xl md:mb-1 mb-0 font-bold">When and Why Do You Need Structured Light 3D Scanners?</h1>
-            <p class="  text-start md:text-xl text-xs md:p-5 px-5 py-1 md:p-0">A 3D scanner that flashes Structured Light patterns into the object  to 3D
+            <h1 class="text-2xl md:text-4xl md:mb-1 mb-0 font-bold">When and Why Do You Need Structured Light 3D
+                Scanners?</h1>
+            <p class="  text-start md:text-xl text-xs md:p-5 px-5 py-1 md:p-0">A 3D scanner that flashes Structured
+                Light patterns into the object  to 3D
                 scan  the
                 shape of an object</p>
-            <div class="text-start md:text-xl text-xs p-5 md:p-0">
+            <div class="text-start md:text-xl text-xs p-5 md:p-8">
                 <p class="">🔘 3D Scanning of small parts requires high precision.</p>
                 <p>🔘 Capturing highly detailed objects for intricate shapes and structure</p>
                 <p>🔘 When high accuracy is required to take the measurement</p>
                 <p>🔘 You need to set up an in-house system for machined parts in a controlled environment, like a CMM
                     (Coordinate Measuring Machine).</p>
             </div>
-
         </div>
-
     </div>
 
     <h1 class="text-center md:text-4xl text-2xl font-bold">Structured Light 3D Scanners <br>Precise3DM Offers</h1>
 
     <!-- 1 Structured Light 3D Scanners Precise3DM Offers -->
-    <div class="container mx-auto px-5 md:px-20  py-10 ">
+    <div class="container mx-auto px-5 md:px-20 py-10 ">
+
         <div
-            class="bg-[linear-gradient(180deg,_#3B3B3B_-14.65%,_#202020_41.32%,_#202020_62.03%)] flex flex-col rounded-3xl items-start justify-center text-white text-center md:px-1 py-20  px-26">
+            class="bg-[linear-gradient(180deg,_#3B3B3B_-14.65%,_#202020_41.32%,_#202020_62.03%)] flex flex-col rounded-3xl items-start justify-center text-white text-center md:px-1 py-0 h-[300px]  px-26">
 
+            <div class="relative md:top-[180px] top-[70px]">
+                <h1 class="text-2xl text-start md:text-4xl mb-1 ms-5 font-bold p-2">Cost Effective Structured Light 3D
+                    Scanner</h1>
+                <p class="mt-2 ms-5 p-2 text-start p-2 my-5 text-2xl orange">Transcan C</p>
+                <div class="flex justify-start">
+                     <button class="orange-btn ms-5 p-2 rounded-xl">Know more</button>
+                </div>
+               
+            </div>
 
-            <h1 class="text-2xl text-start md:text-4xl mb-1 ms-5 font-bold p-2">Cost Effective Structured Light 3D
-                Scanner</h1>
-            <p class="mt-2 ms-5 p-2 text-start p-2 my-5 text-2xl orange">Transcan C</p>
-
+            <img src="./assets/img/position-img-1.png" class="relative md:right-[-800px;] right-[-80px] md:bottom-[130px] bottom-[60px]" alt="">
             <div>
-                <button class="orange-btn ms-5 p-2 rounded-xl">Know more</button>
+
             </div>
         </div>
 
@@ -278,7 +256,7 @@
             class="bg-[linear-gradient(180deg,_#3B3B3B_-14.65%,_#202020_41.32%,_#202020_62.03%)] flex flex-col rounded-3xl items-end justify-center text-white text-center md:px-1 py-20  px-26">
 
 
-            <h1 class="text-2xl text-start md:text-4xl mb-1 me-5 font-bold p-2">Structured Light 3D Scanners
+            <h1 class="text-2xl text-end md:text-4xl mb-1 me-5 font-bold p-2">Structured Light 3D Scanners
             </h1>
             <p class="mt-2 me-5 p-2 text-start p-2 my-5 text-2xl orange">Optim Sca5m PLUS
             </p>
@@ -319,7 +297,7 @@
 
                 <button class="bg-orange-100 px-8 border  border-orange-300 py-3 md:ms-8">Read More</button>
             </div>
-            
+
         </div>
 
     </div>
@@ -400,6 +378,10 @@
             </a>
         </div>
     </footer>
+
+    <a href="https://wa.me/your-number" target="_blank" class="md:fixed bottom-4 right-4">
+        <img src="./assets/img/whatsapp.png" alt="WhatsApp" class="w-10   rounded-full">
+    </a>
 </body>
 
 </html>
