--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
 
     <!-- how it works -->
-    <div class="container mx-auto px-5 md:px-20 py-10">
+    <div class="container mx-auto p-5 md:px-20 py-10">
         <h1 class="text-center font-bold text-4xl mb-10">How it works?</h1>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
             <div class="border rounded-3xl  external_shadow">
@@ -205,6 +205,7 @@
             </div>
         </div>
     </div>
+
     <!-- When and Why Do You Need Structured Light 3D Scanners? -->
     <div class="container mx-auto px-5 md:px-20  py-10  mx-4 my-10">
         <div class="bg-img3 flex flex-col rounded-3xl items-center justify-center text-white text-center md:px-1 px-26">
@@ -214,7 +215,7 @@
                 Light patterns into the object  to 3D
                 scan  the
                 shape of an object</p>
-            <div class="text-start md:text-xl text-xs p-5 md:p-8">
+            <div class="md:visible hidden text-start md:text-xl text-xs p-5 md:p-8">
                 <p class="">🔘 3D Scanning of small parts requires high precision.</p>
                 <p>🔘 Capturing highly detailed objects for intricate shapes and structure</p>
                 <p>🔘 When high accuracy is required to take the measurement</p>
@@ -227,22 +228,23 @@
     <h1 class="text-center md:text-4xl text-2xl font-bold">Structured Light 3D Scanners <br>Precise3DM Offers</h1>
 
     <!-- 1 Structured Light 3D Scanners Precise3DM Offers -->
-    <div class="container mx-auto px-5 md:px-20 py-10 ">
+    <div class="container mx-auto px-5 md:px-32 py-10 ">
 
         <div
             class="bg-[linear-gradient(180deg,_#3B3B3B_-14.65%,_#202020_41.32%,_#202020_62.03%)] flex flex-col rounded-3xl items-start justify-center text-white text-center md:px-1 py-0 h-[300px]  px-26">
 
-            <div class="relative md:top-[180px] top-[70px]">
+            <div class="relative md:left-[70px] md:top-[180px] top-[70px]">
                 <h1 class="text-2xl text-start md:text-4xl mb-1 ms-5 font-bold p-2">Cost Effective Structured Light 3D
                     Scanner</h1>
                 <p class="mt-2 ms-5 p-2 text-start p-2 my-5 text-2xl orange">Transcan C</p>
                 <div class="flex justify-start">
-                     <button class="orange-btn ms-5 p-2 rounded-xl">Know more</button>
+                    <button class="orange-btn ms-5 p-2 rounded-xl">Know more</button>
                 </div>
-               
+
             </div>
 
-            <img src="./assets/img/position-img-1.png" class="relative md:right-[-800px;] right-[-80px] md:bottom-[130px] bottom-[60px]" alt="">
+            <img src="./assets/img/position-img-1.png"
+                class="relative md:right-[-700px;] right-[-80px] md:bottom-[130px] bottom-[60px]" alt="">
             <div>
 
             </div>
@@ -251,23 +253,29 @@
     </div>
 
     <!-- 2 Structured Light 3D Scanners Precise3DM Offers -->
-    <div class="container mx-auto px-5 md:px-20  py-10 ">
+    <div class="container mx-auto px-5 md:px-32  py-16 ">
         <div
-            class="bg-[linear-gradient(180deg,_#3B3B3B_-14.65%,_#202020_41.32%,_#202020_62.03%)] flex flex-col rounded-3xl items-end justify-center text-white text-center md:px-1 py-20  px-26">
+            class="bg-[linear-gradient(180deg,_#3B3B3B_-14.65%,_#202020_41.32%,_#202020_62.03%)] flex flex-col rounded-3xl items-end justify-center text-white text-center md:px-1 py-20 md:h-[300px] px-26 p-5 md:p-0">
 
+            <div class="relative md:top-[180px] top-[-50px] md:right-[100px] right-[00px]">
+                <h1 class="text-2xl text-start md:text-4xl mb-1 me-5 font-bold p-2">Structured Light 3D Scanners
+                </h1>
+                <p class="mt-2 me-5 p-2 text-start p-2 my-5 text-2xl orange">Optim Sca5m PLUS
+                </p>
+                <div class="flex justify-start">
+                             <button class="orange-btn me-5 p-2 rounded-xl">Know more</button>
+                </div>
+       
+            </div>
 
-            <h1 class="text-2xl text-end md:text-4xl mb-1 me-5 font-bold p-2">Structured Light 3D Scanners
-            </h1>
-            <p class="mt-2 me-5 p-2 text-start p-2 my-5 text-2xl orange">Optim Sca5m PLUS
-            </p>
 
             <div>
-                <button class="orange-btn me-5 p-2 rounded-xl">Know more</button>
+                <img src="./assets/img/position-img-2.png" alt=""
+                    class="relative md:right-[805px;]  right-[-20px] md:bottom-[130px] bottom-[60px] w-[400px]">
             </div>
         </div>
 
     </div>
-
 
     <!-- Blog -->
     <div class="container mx-auto px-5 md:px-20  py-10 ">
@@ -279,7 +287,7 @@
                 </div>
                 <p class="py-5 md:ms-8">EinScan H2 for Facial Prosthetic Applications"</p>
 
-                <button class="bg-orange-100 px-8 border  border-orange-300 py-3 md:ms-8">Read More</button>
+                <button class="bg-orange-100 px-8 border  border-orange-300 py-3 md:ms-8 rounded-xl">Read More</button>
             </div>
             <div class="md:w-1/3">
                 <div class="flex justify-center">
@@ -287,7 +295,7 @@
                 </div>
                 <p class="py-5 md:ms-8">EinScan H2 for Facial Prosthetic Applications"</p>
 
-                <button class="bg-orange-100 px-8 border  border-orange-300 py-3 md:ms-8">Read More</button>
+                <button class="bg-orange-100 px-8 border  border-orange-300 py-3 md:ms-8 rounded-xl">Read More</button>
             </div>
             <div class="md:w-1/3">
                 <div class="flex justify-center">
@@ -295,7 +303,7 @@
                 </div>
                 <p class="py-5 md:ms-8">EinScan H2 for Facial Prosthetic Applications"</p>
 
-                <button class="bg-orange-100 px-8 border  border-orange-300 py-3 md:ms-8">Read More</button>
+                <button class="bg-orange-100 px-8 border  border-orange-300 py-3 md:ms-8 rounded-xl">Read More</button>
             </div>
 
         </div>
