--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 Light patterns into the object  to 3D
                 scan  the
                 shape of an object</p>
-            <div class="md:visible hidden text-start md:text-xl text-xs p-5 md:p-8">
+            <div class=" text-start md:text-xl text-xs p-5 md:p-8">
                 <p class="">🔘 3D Scanning of small parts requires high precision.</p>
                 <p>🔘 Capturing highly detailed objects for intricate shapes and structure</p>
                 <p>🔘 When high accuracy is required to take the measurement</p>
