--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <!-- Mobile Menu -->
-        <div id="mobile-menu" class="hidden md:hidden flex-col bg-gray-900 text-white">
+        <div id="mobile-menu" class="md:hidden hidden flex-col bg-[linear-gradient(180deg,_#3B3B3B_-14.65%,_#202020_41.32%,_#202020_62.03%)] py-10 text-white">
             <a href="#" class="block px-4 py-2 hover:bg-gray-700">Home</a>
             <a href="#" class="block px-4 py-2 hover:bg-gray-700">3D Products</a>
             <a href="#" class="block px-4 py-2 hover:bg-gray-700">3D Solutions</a>
@@ -263,9 +263,9 @@
                 <p class="mt-2 me-5 p-2 text-start p-2 my-5 text-2xl orange">Optim Sca5m PLUS
                 </p>
                 <div class="flex justify-start">
-                             <button class="orange-btn me-5 p-2 rounded-xl">Know more</button>
+                    <button class="orange-btn me-5 p-2 rounded-xl">Know more</button>
                 </div>
-       
+
             </div>
 
 
@@ -390,6 +390,14 @@
     <a href="https://wa.me/your-number" target="_blank" class="md:fixed bottom-4 right-4">
         <img src="./assets/img/whatsapp.png" alt="WhatsApp" class="w-10   rounded-full">
     </a>
+    <script>
+        const menuBtn = document.getElementById('menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
+        menuBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+
+    </script>
 </body>
 
 </html>
