--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         quality <br> control, and reverse engineering.
                     </p>
 
-                    <div class="flex  p-2 md:p-0 gap-5">
+                    <div class="flex   p-2 md:p-0 gap-5">
                         <div class="bg-white shadow-lg rounded-lg p-4 flex flex-col justify-around items-center">
                             <img src="./assets/img/hero_img_1.png" alt="Optimscan5M Plus"
                                 class="w-60 h-38 object-cover rounded-md">
@@ -244,7 +244,7 @@
             </div>
 
             <img src="./assets/img/position-img-1.png"
-                class="relative md:right-[-700px;] right-[-80px] md:bottom-[130px] bottom-[60px]" alt="">
+                class="relative md:right-[-700px;] right-[-150px] md:bottom-[130px] bottom-[40px] overflow-hidden" alt="">
             <div>
 
             </div>
@@ -271,7 +271,7 @@
 
             <div>
                 <img src="./assets/img/position-img-2.png" alt=""
-                    class="relative md:right-[805px;]  right-[-20px] md:bottom-[130px] bottom-[60px] w-[400px]">
+                    class="relative md:right-[805px;]  right-[-20px] md:bottom-[130px] bottom-[0px] w-[400px]">
             </div>
         </div>
 
