--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <div
             class="bg-[linear-gradient(180deg,_#3B3B3B_-14.65%,_#202020_41.32%,_#202020_62.03%)] flex flex-col rounded-3xl items-start justify-center text-white text-center md:px-1 py-0 h-[300px]  px-26">
 
-            <div class="relative md:left-[70px] md:top-[180px] top-[70px]">
+            <div class="relative md:left-[70px] md:top-[80px] top-[70px]">
                 <h1 class="text-2xl text-start md:text-4xl mb-1 ms-5 font-bold p-2">Cost Effective Structured Light 3D
                     Scanner</h1>
                 <p class="mt-2 ms-5 p-2 text-start p-2 my-5 text-2xl orange">Transcan C</p>
@@ -244,7 +244,7 @@
             </div>
 
             <img src="./assets/img/position-img-1.png"
-                class="relative md:right-[-700px;] right-[-150px] md:bottom-[130px] bottom-[40px] overflow-hidden" alt="">
+                class="relative md:right-[-1100px;] right-[-150px] md:bottom-[130px] bottom-[40px] overflow-hidden" alt="">
             <div>
 
             </div>
@@ -260,7 +260,7 @@
             <div class="relative md:top-[180px] top-[-50px] md:right-[100px] right-[00px]">
                 <h1 class="text-2xl text-start md:text-4xl mb-1 me-5 font-bold p-2">Structured Light 3D Scanners
                 </h1>
-                <p class="mt-2 me-5 p-2 text-start p-2 my-5 text-2xl orange">Optim Sca5m PLUS
+                <p class="mt-2 me-5 p-2 text-start p-2 my-5 text-2xl orange">Optim Scam PLUS
                 </p>
                 <div class="flex justify-start">
                     <button class="orange-btn me-5 p-2 rounded-xl">Know more</button>
