--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </div>
     </div>
 
-    <h1 class="text-center md:text-4xl text-2xl font-bold">Structured Light 3D Scanners <br>Precise3DM Offers</h1>
+    <h1 class="text-center md:text-4xl text-2xl font-bold md:my-16">Structured Light 3D Scanners <br>Precise3DM Offers</h1>
 
     <!-- 1 Structured Light 3D Scanners Precise3DM Offers -->
     <div class="container mx-auto px-5 md:px-32 py-10 ">
